--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     
             <div class="space"></div>
 
-            <footer>
+            <footer class="center-container">
                 <table>
                     <thead>
                         <tr>
