--- a/content.html
+++ b/content.html
@@ -68,7 +68,7 @@
 
             <div class="space"></div>
 
-            <footer>
+            <footer class="center-container">
                 <table>
                     <thead>
                         <tr>
