--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
                         <p>10/10 <i><br><br> - IGN</i></p>
                     </div>
                     <div id="review2" class="small-container">
-                        <p> I love anime <i><br><br> - xXEdgarKittenSlayerXx</i></p>
+                        <p> I love this epic show <i><br><br> - User0256 </i></p>
                     </div>
                 </div>
             </section>
@@ -61,7 +61,7 @@
             
             <div class="space"></div>
 
-            <footer>
+            <footer class="center-container">
                 <table>
                     <thead>
                         <tr>
